--- a/bye.html
+++ b/bye.html
@@ -1,10 +1,10 @@
 <html>
 <head>
   <title>
-    Welcome
+    Bye
   </title>
 </head>
 <body>
-  <h1>Welcome to CodeDrill Divya!</h1>
+  <h1>Enjoy Holidays!</h1>
 </body>
 </html>
